fixed newsProviders' loading issues, displaying news from homePage, simple html improvments

--- a/TeslaWaysApp/src/app/app.html
+++ b/TeslaWaysApp/src/app/app.html
@@ -16,4 +16,4 @@
 </ion-menu>
 
 <!-- Disable swipe-to-go-back because it's poor UX to combine STGB with side menus -->
-<ion-nav [root]="rootPage" #content swipeBackEnabled="false"></ion-nav>
+<ion-nav [root]="rootPage" [rootParams]="rootPageParams" #content swipeBackEnabled="false"></ion-nav>
