--- a/tesla-ways-app/src/pages/selfie/selfie.scss
+++ b/tesla-ways-app/src/pages/selfie/selfie.scss
@@ -1,12 +1,4 @@
-ion-content {
+.front {
     background-color: transparent;
 }
 
-#btnTakePic {
-    position: relative;
-    top: 50%;
-}
-
-#canvas {
-    height: 70%;
-}
